--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,7 +9,6 @@ dependencies:
   - name: ub-ansible-deploy-facts
     src: https://github.com/ub-digit/ub-ansible-deploy-facts.git
     version: master
-dependencies:
-  - name: ub-ansible-deploy-import-db
+  - name: ub-ansible-import-db
     src: https://github.com/ub-digit/ub-ansible-deploy-import-db.git
     version: master
